# Where_to_go

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml
.github/workflows/: action.yml
Where_to_go/: asgi.py  settings.py  urls.py  wsgi.py
deploy/: .env_ci  Nginx.conf  docker-compose-ci.yml  nginx.conf
nginx/: nginx.conf
places/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
places/management/commands/: load_place.py
places/migrations/: 0001_initial.py  0002_alter_place_description_long.py  0003_alter_place_options_remove_place_imgs_and_more.py  0004_alter_image_options.py  0005_image_number_image_alter_image_imgs.py  0006_alter_image_number_image.py  0007_alter_image_places.py  0008_alter_image_options_alter_image_number_image.py  0009_alter_image_number_image.py  0010_alter_place_description_long_and_more.py  0011_rename_imgs_image_img_alter_image_number_image_and_more.py  0012_rename_places_image_place_and_more.py
places/templates/: index.html
to_go/: urls.py
to_go/static/: README.md
